--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,7 @@
 @import "components/product-box";
 
 @import "components/section--features";
+@import "components/section--products";
 
 body {
   font-family: 'Poppins', sans-serif;
