--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -245,7 +245,7 @@ header {
                 top: -1px;
                 transform: scaleX(0);
                 transform-origin: 0%;
-                left: 188px;
+                right: calc(-100% - 2px);
                 color: $text-color;
               }
   
@@ -275,6 +275,7 @@ header {
             border: 0;
             padding-left: 10px;
             font-size: 14px;
+            width: 100%;
             outline: none;
   
             &::placeholder {
@@ -293,7 +294,7 @@ header {
   }
 }
 
-@media(max-width: 992px) {
+@media(max-width: 1200px) {
 
   header {
   
@@ -325,7 +326,7 @@ header {
   }
 }
 
-@media(max-width: 573px) {
+@media(max-width: 575px) {
 
   header {
   
@@ -359,6 +360,10 @@ header {
 
       .search-wrapper {
         justify-content: space-evenly;
+
+        .search-form {
+          margin-left: 10px;
+        }
         
         .category-list-show {
           display: flex;
