--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,4 +33,12 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
+  &.active {
+      background-color: $header-topbar-bg;
+      color: #ffffff;
+    &:hover {
+      background-color: #ffffff;
+      color: $header-topbar-bg ;
+    }
+  }
 }
