--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -103,4 +103,21 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  &:hover {
+    .photo {
+      .buttons {
+        visibility: visible;
+      }
+    }
+
+    .actions {
+      .price {
+        .btn-main-small {
+          background-color: $primary;
+        }
+      }  
+    }
+  }
+
 }
