--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -180,18 +180,27 @@ header {
         align-items: center;
         position: relative;
         padding: 0 30px 0 35px;
+        transition: 300ms;
 
-        i:first-child {
-          color: $primary;
-          position: absolute;
-          left: 10px;
-          z-index: 0;
+        &:hover,
+        &:hover i:first-child {
+          cursor: pointer;
+          background: $primary;
+          color: white;
+          transition: 300ms;
         }
 
-        i:last-child {
+        i {
           position: absolute;
-          right: 10px;
           z-index: 0;
+
+          &:first-child {
+            color: $primary;
+            left: 10px;
+          }
+          &:last-child {
+            right: 10px;
+          }
         }
 
         .select-cta {
@@ -203,6 +212,7 @@ header {
         
         .category-first,
         .category-second {
+          color: $text-color;
           margin: 0;
           padding: 0;
           border: 1px solid #292929;
@@ -233,6 +243,7 @@ header {
             position: relative;
 
             &:hover {
+              cursor: pointer;
               background: $primary;
               color: white;
               transition: 300ms;
@@ -250,10 +261,6 @@ header {
               transform: scaleX(1);
             }
           }
-        }
-
-        &:hover {
-          cursor: pointer;
         }
 
         &:hover .category-first {
