--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -174,6 +174,13 @@ header {
       height: 45px;
       color: $text-color;
 
+      %category-hover {
+        cursor: pointer;
+        background: $primary;
+        color: #ffffff;
+        transition: 300ms;
+      }
+
       .category {
         border-right: 1px solid $form-border-color;
         display: flex;
@@ -184,10 +191,7 @@ header {
 
         &:hover,
         &:hover i:first-child {
-          cursor: pointer;
-          background: $primary;
-          color: white;
-          transition: 300ms;
+          @extend %category-hover;
         }
 
         i {
@@ -243,10 +247,7 @@ header {
             position: relative;
 
             &:hover {
-              cursor: pointer;
-              background: $primary;
-              color: white;
-              transition: 300ms;
+              @extend %category-hover;
             }
 
             .category-second {
