--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -183,6 +183,13 @@ header {
         display: inline-flex;
         height: 45px;
         color: $text-color;
+
+        %category-hover {
+          cursor: pointer;
+          background: $primary;
+          color: #ffffff;
+          transition: 300ms;
+        }
   
         .category {
           border-right: 1px solid $form-border-color;
@@ -190,29 +197,36 @@ header {
           align-items: center;
           position: relative;
           padding: 0 30px 0 35px;
-  
-          i:first-child {
-            color: $primary;
-            position: absolute;
-            left: 10px;
-            z-index: 0;
+
+          &:hover,
+          &:hover i:first-child {
+            @extend %category-hover;
           }
-  
-          i:last-child {
+
+          i {
             position: absolute;
-            right: 10px;
             z-index: 0;
+    
+            &:first-child {
+              color: $primary;
+              left: 10px;
+            }
+            
+            &:last-child {
+              right: 10px;
+            }
           }
   
           .select-cta {
             p {
               font-size: 14px;
               margin: 0;
-      
             }
           }
           
-          ul {
+          .category-first,
+          .category-second {
+            color: $text-color;
             margin: 0;
             padding: 0;
             border: 1px solid #292929;
@@ -233,7 +247,7 @@ header {
             border-top: none;
   
             
-            li {
+            .category-element {
               font-size: 14px;
               line-height: 43px;
               padding: 0 10px;
@@ -243,9 +257,7 @@ header {
               position: relative;
   
               &:hover {
-                background: $primary;
-                color: white;
-                transition: 300ms;
+                @extend %category-hover;
               }
   
               .category-second {
@@ -253,17 +265,12 @@ header {
                 transform: scaleX(0);
                 transform-origin: 0%;
                 right: calc(-100% - 2px);
-                color: $text-color;
               }
   
               &:hover .category-second {
                 transform: scaleX(1);
               }
             }
-          }
-  
-          &:hover {
-            cursor: pointer;
           }
   
           &:hover .category-first {
