Add class to h5 in post-box

--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -9,7 +9,7 @@
       color: $text-color;
 
       .post-info {
-        h5 {
+        &-header {
           color: $primary;
         }
         .more {
