WDP181101-10 add dropdown menu

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,7 +9,7 @@
 @import "fontawesome/regular";
 
 @import "components/header";
-// @import "components/header_menu";
+@import "components/header_menu";
 @import "components/footer";
 
 @import "components/button";
