--- a/src/sass/components/_header_menu.scss
+++ b/src/sass/components/_header_menu.scss
@@ -1,7 +1,11 @@
 .menu-bar {
     box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
     background-color: #ffffff;
-
+a:hover{
+    text-decoration: none;
+    color: white;
+    background-color: $primary;
+}
     .container>.row {
         height: 84px;
     }
@@ -83,6 +87,7 @@
     list-style: none;
     display: flex;
     align-items: stretch;
+    position: relative;
 }
 
 .menu_overlist_item_link {
@@ -102,9 +107,45 @@
         background-color: $primary;
         color: #ffffff;
         border-color: $primary;
+
     }
 
     &.active {
         border-color: $text-color;
     }
 }
+
+.menu_dropdown_list {
+    padding: 0;
+    top: 82px;
+      display: none;
+      list-style: none;
+      width: 100%;
+    position: absolute;
+     text-align: center;
+     z-index: 1;
+}
+.menu_dropdown_list_item{
+    list-style: none;
+    text-align: center;
+  }
+.menu_dropdown_list_item_link {
+    color: $text-color;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding: 0.5rem;
+ background-color: white;
+    display: flex;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.menu_overlist_item:hover .menu_dropdown_list {
+    display: block;
+}
+// .menu_dropdown_item_link:hover {
+//     background-color: $primary;
+//         // color: #ffffff;
+//         border-color: $primary;
+// }
