WDP181101-10 add colors to dropdown menu

--- a/src/sass/components/_header_menu.scss
+++ b/src/sass/components/_header_menu.scss
@@ -1,11 +1,7 @@
 .menu-bar {
     box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
     background-color: #ffffff;
-a:hover{
-    text-decoration: none;
-    color: white;
-    background-color: $primary;
-}
+
     .container>.row {
         height: 84px;
     }
@@ -102,12 +98,16 @@ a:hover{
     font-weight: 500;
     letter-spacing: 1px;
 
+    a:hover {
+        text-decoration: none;
+        color: #fff;
+    }
+
     &:hover,
     &.active {
         background-color: $primary;
         color: #ffffff;
         border-color: $primary;
-
     }
 
     &.active {
@@ -118,34 +118,41 @@ a:hover{
 .menu_dropdown_list {
     padding: 0;
     top: 82px;
-      display: none;
-      list-style: none;
-      width: 100%;
+    display: none;
+    list-style: none;
+    width: 100%;
     position: absolute;
-     text-align: center;
-     z-index: 1;
+    z-index: 1;
+
+    a:hover {
+        text-decoration: none;
+        color: $text-color;
+    }
 }
-.menu_dropdown_list_item{
+
+.menu_dropdown_list_item {
     list-style: none;
     text-align: center;
-  }
+    background-color: $primary;
+    border-top: 1px solid white;
+}
+
 .menu_dropdown_list_item_link {
-    color: $text-color;
+    color: white;
     text-transform: uppercase;
     font-size: 12px;
     padding: 0.5rem;
- background-color: white;
     display: flex;
     font-weight: 500;
     letter-spacing: 1px;
-    text-align: center;
 }
 
 .menu_overlist_item:hover .menu_dropdown_list {
     display: block;
 }
-// .menu_dropdown_item_link:hover {
-//     background-color: $primary;
-//         // color: #ffffff;
-//         border-color: $primary;
-// }
+
+.menu_dropdown_list_item_link:hover {
+    background-color: white;
+    border-radius: 50% 0 50% 0;
+    border-left: 1px solid $primary;
+}
