Change background color for .active for btn-outline buttons to

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -34,7 +34,7 @@
     color: #ffffff;
   }
   &.active {
-      background-color: $header-topbar-bg;
+      background-color: $primary;
       color: #ffffff;
     &:hover {
       background-color: #ffffff;
