Fix - hover with classes

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -51,12 +51,12 @@
 
   &:active,
   &:hover {
-    i {
+    .icon i {
       background-color: $primary;
       color: #ffffff;
       border-color: $primary;
     }
-    a {
+    .feature-link {
       text-decoration: none;
     }
 
