Add mixin and extend to hover effects

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -52,15 +52,18 @@
   &:active,
   &:hover {
     i {
+      @extend %hover-bg;
       background-color: $primary;
       color: #ffffff;
       border-color: $primary;
     }
     a {
+      @extend %hover-element;
       text-decoration: none;
     }
 
     .content {
+      @extend %hover-element;
       color: $primary;
     }
   }
