--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,6 +7,7 @@
   padding: 10px 30px;
 
   &:not(.no-hover):hover {
+    @extend %hover-bg;
     color: #ffffff !important;
     background-color: $primary;
     text-decoration: none;
@@ -30,6 +31,8 @@
   line-height: 22px;
 
   &:hover {
+    @extend %hover-element;
+    @extend %hover-bg;
     background-color: #2a2a2a;
     color: #ffffff;
   }
