--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -16,6 +16,7 @@ header {
           font-size: 13px;
 
           &:hover {
+            @extend %hover-element;
             color: $primary;
             text-decoration: none;
           }
@@ -105,6 +106,7 @@ header {
 
         &:hover {
           .cart-icon {
+            @extend %hover-element;
             background-color: lighten($primary, 10%);
           }
         }
@@ -148,6 +150,8 @@ header {
 
             &:hover,
             &.active {
+              @extend %hover-element;
+              @extend %hover-bg;
               background-color: $primary;
               color: #ffffff;
               border-color: $primary;
