--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -47,6 +47,7 @@
 
           &.active,
           &:hover {
+            @extend %hover-element;
             &::before {
               content: '';
               position: absolute;
@@ -82,6 +83,7 @@
 
           &.active,
           &:hover {
+            @extend %hover-bg;
             background-color: $primary;
           }
         }
