Fix showing avg value when not hover even if marked

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -73,7 +73,7 @@
         &.full {
           @extend .fas;
         }
-        &.active {
+        &.active, &.permanent {
           @extend .fas;
           color: $primary;
         }
