--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,12 +8,16 @@ header {
       padding: 0;
 
       li {
-        display: inline-block;
-        line-height: 55px;
+
 
         a {
           color: #ffffff;
           font-size: 13px;
+
+          p {
+            margin: 0 auto;
+            padding: 0;
+          }
 
           &:hover {
             color: $primary;
@@ -43,26 +47,8 @@ header {
   .company-claim {
     background-color: $header-bg;
 
-    .container > .row {
+    .container>.row {
       height: 145px;
-    }
-
-    .phone-number {
-      p {
-        margin: 0;
-        font-size: 17px;
-        line-height: 42px;
-        color: rgb(216,216,216);
-        font-weight: 500;
-
-        i {
-          font-size: 32px;
-          color: $primary;
-          vertical-align: middle;
-          margin-top: -3px;
-          margin-right: 0.8rem;
-        }
-      }
     }
 
     .cart {
@@ -83,6 +69,7 @@ header {
           justify-content: center;
           font-size: 20px;
           margin-right: 10px;
+
           i {
             margin-right: 5px;
           }
@@ -97,7 +84,7 @@ header {
           align-items: center;
           padding-left: 5px;
           font-size: 14px;
-          color: rgb(224,227,237);
+          color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
           right: 0;
@@ -111,5 +98,104 @@ header {
         }
       }
     }
+  }
+}
+
+.phone_number_text {
+  margin: 0;
+  font-size: 17px;
+  line-height: 42px;
+  color: rgb(216, 216, 216);
+  font-weight: 500;
+}
+
+.phone_number_icon {
+  font-size: 32px;
+  color: $primary;
+  vertical-align: middle;
+  margin-top: -3px;
+  margin-right: 0.8rem;
+}
+
+.header_icon_mobile,
+.phone_number_mobile_view {
+  display: none;
+}
+
+.header_left_options_mobile_view,
+.header_right_options_mobile_view {
+  display: inline-block;
+  line-height: 55px;
+}
+
+@media screen and (max-width: 641px) {
+
+  .header_icon_fullscreen,
+  .phone-number {
+    display: none;
+  }
+
+  .header_icon_mobile {
+    display: inline-block;
+  }
+
+  .header_mobile_view {
+    display: flex;
+  }
+
+  .header_left_options_mobile_view {
+    line-height: 30px;
+  }
+
+  .header_right_options_mobile_view {
+    line-height: 30px;
+  }
+
+  .header_cart_mobile_view {
+    padding: 0;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .cart-box {
+    margin-top: 10px;
+  }
+
+  .phone_number_mobile_view {
+    padding: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .phone_number_text {
+    font-size: 13px;
+    line-height: 20px;
+    margin-right: 10px;
+  }
+
+  .phone_number_icon {
+    margin-right: 3px;
+  }
+
+  .header_container_mobile_view {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 30vw;
+  }
+
+  .header_banner_mobile_view {
+    width: 70vw;
+
+    img {
+      width: 100%;
+    max-width: 165px; 
+    }
+  }
+  header .top-bar .text-right ul li{
+    margin-left: 1rem;
   }
 }
