Add transitions on hovers, transitions variables and file transitionsPlaceholder

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,6 +6,10 @@
   font-weight: 600;
   padding: 10px 30px;
 
+  &:not(.no-hover) {
+    @extend %transitionsAll;
+  }
+
   &:not(.no-hover):hover {
     color: #ffffff !important;
     background-color: $primary;
@@ -30,6 +34,7 @@
   line-height: 22px;
 
   &:hover {
+    @extend %transitionsAll;
     background-color: #2a2a2a;
     color: #ffffff;
   }
