--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+@import "transitionsPlaceholder";
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
 @import "bootstrap/bootstrap.scss";
@@ -7,6 +9,8 @@
 @import "fontawesome/solid";
 @import "fontawesome/brands";
 @import "fontawesome/regular";
+
+
 
 @import "components/header";
 @import "components/footer";
