Fix naming styles according to BEM methodology (block__element)

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
     align-items: flex-end;
 
-    &--image {
+    &__image {
       width: 100%;
       height: 100%;
       position: absolute;
