--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -10,7 +10,7 @@
     }
     position: relative;
 
-    &--image {
+    &__image {
       width: 100%;
       height: 100%;
       position: absolute;
