Add RWD to furniture categories

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -29,10 +29,12 @@
 
   .menu {
     text-align: center;
+
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -87,5 +89,24 @@
         }
       }
     }
+  }
+}
+
+@media(max-width: 768px) {
+
+  .panel-bar {
+    margin-bottom: 55px;
+
+    .menu {
+
+      ul {
+        display: flex;
+        left: -170px;
+        top: 10px;
+        position: absolute;
+        z-index: 999;
+      }
+    }
+
   }
 }
