--- a/src/sass/components/_section--deals.scss
+++ b/src/sass/components/_section--deals.scss
@@ -23,23 +23,23 @@
                 padding: 15px;
                 color: #ffffff;
 
-                h2 {
+                .thumbnail-big-h2 {
 
                     &:first-child {
                         font-weight: 700;
                         margin-bottom: 0;
 
-                        span {
+                        .thumbnail-big-h2-span {
                             font-size: 3rem;
                         }
                     }
                     
                     &:last-child {
-                    padding: 6px 12px;
-                    border: 5px solid #ffffff;
-                    align-self: start;
-                    font-weight: 600;
-                    font-size: 2.5rem;
+                        padding: 6px 12px;
+                        border: 5px solid #ffffff;
+                        align-self: flex-start;
+                        font-weight: 600;
+                        font-size: 2.5rem;
                     }
                 }
             }
@@ -63,21 +63,21 @@
 
                 .thumbnail-top-text {
 
-                    h2 {
+                    .thumbnail-top-h2 {
                         font-weight: 600;
                         margin-bottom: 0;
 
-                        span {
+                        .thumbnail-top-h2-span {
                             font-weight: 300;
                         }
                     }
 
-                    h5 {
+                    .thumbnail-top-h5 {
                         font-weight: 600;
                         margin-bottom: 3px;
                     }
 
-                    h3 {
+                    .thumbnail-top-h3 {
                         color: $primary;
                         font-weight: 600;
                         font-size: 2rem;
@@ -93,13 +93,13 @@
 
                 .thumbnail-bottom-text {
 
-                    h4 {
+                    .thumbnail-bottom-h4 {
                         &:first-child {
                             color: $primary;
                             font-weight: 700;
                             margin-bottom: 3px;
 
-                            span {
+                            .thumbnail-bottom-h4-span {
                                 font-weight: 300;
                             }
                         }
@@ -153,7 +153,7 @@
                         background: rgba(0, 0, 0, .3);
                         padding: 20px;
 
-                        h4 {
+                        .thumbnail-bottom-h4 {
                             &:first-child {
                                 color: #ffffff;
                             }
