--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,7 +18,9 @@
 @import "components/product-box";
 
 @import "components/section--features";
+@import "components/section--brands";
 
 body {
   font-family: 'Poppins', sans-serif;
 }
+
