--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -33,27 +33,23 @@
   .post-info {
     padding: 25px;
 
-    h5 {
+    &__header {
       color: $text-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
     }
 
-    p {
+    &__text {
       font-size: 14px;
       line-height: 24px;
       color: rgb(103,103,103);
       text-align: justify;
     }
 
-    .more {
+    &__more {
       text-align: center;
       padding-top: 30px;
-
-      a {
-        color: white;
-      }
     }
   }
   
@@ -71,6 +67,6 @@
   }
 }
 
-.section--blog-posts a:hover {
+.section--blog-posts .post-box-link:hover {
   text-decoration: none;
 }
