--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,10 @@ $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
+$secondary: #e0a38e;
 
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+
