Change h1/h2 for p.number and p.text

--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -61,11 +61,14 @@
               color: white;
               text-transform: uppercase;
               padding-top: 15px;
-              h1 {
+              p {
+                margin-bottom: 5px;
+              }
+              .number {
                 font-size: 1.5rem;
                 line-height: 1.5rem;
               }
-              h2 {
+              .text {
                 font-size: 0.9rem;
                 line-height: 8px;
               }
