--- a/src/sass/components/_section--brands.scss
+++ b/src/sass/components/_section--brands.scss
@@ -1,18 +1,22 @@
 .section--brands {
   margin: 30px 0 60px 0;
   height: 140px;
+
   .container {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
+
   .logos {
     position: relative;
     width: 85%;
     margin: 0 auto;
     height: 140px;
     padding: 10px 0;
-    .col-2 {
+
+    .pocket {
       padding: 0 4px;
     }
+
     .logoBox {
       border: 1px solid #ddd;
       padding: 10px;
@@ -22,6 +26,7 @@
       text-align: center;
       display: flex;
       align-items: center;
+
       .logo {
         height: auto;
         max-height: 100%;
@@ -29,25 +34,27 @@
         max-width: 100%;
       }
     }
+
     .arrow {
       background: $footer-claim-bg;
-      color: white;
+      color: #fff;
       height: 90px;
       width: 40px;
       text-align: center;
       position: absolute;
       top: 25px;
+
       span {
         position: relative;
         top: 38%;
       }
-    }
-    .arr-left {
-      left: -80px;
-    }
-    .arr-right {
-      right: -80px;
+
+      &-left {
+        left: -80px;
+      }
+      &-right {
+        right: -80px;
+      }
     }
   }
-  }
-}
+}}
