--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,7 +17,7 @@
 @import "components/panel-bar";
 @import "components/post-box";
 @import "components/product-box";
-
+@import "components/section--products";
 @import "components/section--features";
 
 body {
