Add RWD to footer (with some special box display only on tablets)

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -76,5 +76,33 @@ footer {
         }
       }
     }
+    &__special-box {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: map-get($grid-breakpoints, lg)) and (max-width: map-get($grid-breakpoints, xl))  {
+  .copyright {
+    text-align: left !important;
+  }
+
+  .socialmedia {
+    text-align: right !important;
+  }
+
+  footer .bottom-bar {
+    &__special-box {
+      display: block;
+      width: 100%;
+    }
+    
+    &__special-text {
+      margin: auto;
+      text-align: center;
+      color: $footer-text-color;
+      font-size: 14px;
+      line-height: 26px;
+    }
   }
 }
