--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -1,30 +1,27 @@
 .section--features {
   padding: 5rem 0;
-    a {
+  a {
     text-decoration:none;
-    
     i {
-      background-color: #ffffff;
-      color: $text-color;
-      border-color: $primary;
+        background-color: #ffffff;
+        color: $text-color;
+        border-color: $primary;
     }
-
     .content {
       color: $text-color;
     }
     &:hover, &:focus {
-          .content {
-      		color: $secondary;
-    	}
-          i {
-      		background-color: $primary;
+      .content {
+          color: $secondary;
+    	 }
+      i {
+          background-color: $primary;
         }
-        .icon
-         {
-         	&:before {
-        	border: 1px solid $primary;
+      .icon {
+        &:before {
+          border: 1px solid $primary;
         }
+      }
     }
   }
-}
 }
