--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -33,11 +33,16 @@
     ul {
       margin: 0;
       padding: 0;
+      margin-left: 30px;
       list-style: none;
+      justify-content: space-between;
+      max-width: 500px;
+      position: relative;
+      z-index: 999;
       
       li {
         display: inline-block;
-        margin: 0 0.5rem;
+        margin: 0;
         font-weight: 600;
 
         a {
@@ -45,6 +50,8 @@
           position: relative;
           text-decoration: none;
           font-size: 18px;
+          margin: 0;
+          padding: 0;
           display: block;
           @extend %transitionsAll;
 
@@ -95,6 +102,20 @@
   
 }
 
+@media(max-width: 992px) {
+
+  .panel-bar {
+
+    .menu {
+
+      ul {
+        max-width: 330px;
+      }
+    }
+
+  }
+}
+
 @media(max-width: 768px) {
 
   .panel-bar {
@@ -105,9 +126,10 @@
       ul {
         display: flex;
         left: -170px;
-        top: 10px;
+        margin-left: 7px;
+        width: 330px;
+        top: 18px;
         position: absolute;
-        z-index: 999;
       }
     }
 
