--- a/src/sass/components/_section--products.scss
+++ b/src/sass/components/_section--products.scss
@@ -6,38 +6,83 @@
             }
         }
 
-        .tab-content {
-            .tab-pane {
-                .carousel {
-                    &-indicators{
-                        margin: 0;
-                        padding: 0 0 0 1rem;
-                        width: fit-content;
-                        height: fit-content;
-                        position: absolute;
-                        top: -54px;
-                        right: 0px;
-                        left: inherit;
-                        list-style: none;
-                        background-color: #ffffff;
-                        transform: translateY(15px);
+        .products-carousel-wrapper {
+            position: relative;
 
-                        &-li {
-                            display: inline-block;
-                            margin-left: 0.5rem;
-                            width: 13px;
-                            height: 13px;
-                            border-radius: 6px;
-                            background-color: #e1e1e1;
-                            
-                            &.active,
-                            &:hover {
-                                background-color: $primary;
-                            }
-                        }   
+            .products-carousel-indicators {
+                margin: 0;
+                padding: 0 0 0 1rem;
+                width: fit-content;
+                height: fit-content;
+                position: absolute;
+                top: -54px;
+                right: 0px;
+                left: inherit;
+                list-style: none;
+                background-color: #ffffff;
+                transform: translateY(15px);
+
+                &-li {
+                    display: inline-block;
+                    margin-left: 0.5rem;
+                    width: 13px;
+                    height: 13px;
+                    border-radius: 6px;
+                    background-color: #e1e1e1;
+                    
+                    &:hover {
+                        cursor: pointer;
+                        background-color: $primary;
+                    }
+                    &:focus {
+                        outline: none;
                     }
                 }
+            
+                .tns-nav-active {
+                    background-color: $primary;
+                }   
             }
         }
     }
+}
+
+@media(max-width: 1200px) {
+    .section--products {
+
+        .container {
+            
+            .products-carousel-wrapper {
+                    
+                .products-carousel-indicators {
+
+                    &-li {
+
+                        &:hover {
+                            background-color: #e1e1e1;
+                        }
+                    }
+            
+                    .tns-nav-active {
+                        background-color: $primary;
+                    } 
+                }
+            }
+        }
+    } 
+}
+
+@media(max-width: 768px) {
+    .section--products {
+
+        .container {
+            
+            .products-carousel-wrapper {
+                    
+                .products-carousel-indicators {
+                    top: -79px;
+                }
+            }
+        }
+    } 
 }
