--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -97,13 +97,14 @@
             a {
                 text-decoration: none;
                 color: rgb(42, 42, 42);
-
                 @extend .far;
-
                 @extend .fa-star;
-
                 &.full {
                     @extend .fas;
+                }
+                &.active, &.permanent {
+                    @extend .fas;
+                    color: $primary;
                 }
             }
         }
@@ -149,4 +150,4 @@
             }
         }
     }
-}
+
