--- a/src/sass/components/_header_menu.scss
+++ b/src/sass/components/_header_menu.scss
@@ -6,8 +6,6 @@
         height: 84px;
     }
 
-    // .menu {}
-
     .search-form {
         border: 1px solid $form-border-color;
         display: inline-flex;
@@ -161,7 +159,7 @@
     border: 1px solid $primary;
 }
 
-.menu_bar_box_hamburger {
+.navbar {
     display: none;
 }
 
@@ -233,9 +231,37 @@
         display: none;
     }
 
+    .menu_bar_container {
+        display: none;
+    }
+
     .menu_bar_box_hamburger {
+        padding: 0.8rem 1rem;
+        margin-right: 3%;
+    }
+
+    .navbar {
         display: flex;
-        padding: 1.5rem 2rem;
+        padding: 0.5rem 0;
+    }
+
+    .menu_overlist_box {
+        width: 100vw;
+        margin-top: 10px;
+    }
+
+    .menu_overlist {
+        width: 100%;
+        padding: 0 3%;
+    }
+
+    .nav-item {
+        height: 50px;
+        border: 1px solid $text-color;
+    }
+
+    .nav-link {
+        font-size: 18px;
     }
 
     .menu_bar_box_hamburger_icon {
@@ -243,7 +269,10 @@
     }
 
     .menu_bar_box_search {
-        max-width: 80vw;
+        max-width: 72vw;
+        padding-left: 3%;
+        padding-right: 0;
+
     }
 
     .menu-bar .search-form {
@@ -261,9 +290,11 @@
             height: 50%;
         }
     }
+
     .menu_bar_box_hamburger:hover,
-    .menu_bar_box_hamburger:active{
+    .menu_bar_box_hamburger:active {
         background-color: $primary;
+
         .menu_bar_box_hamburger_icon {
             color: #fff;
         }
