--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -1,3 +1,9 @@
 .section--features {
   padding: 5rem 0;
 }
+
+@media(max-width: 992px) {
+  .section--features {
+    padding: 1rem 0 3rem 0;
+  }
+}
